--- a/styles/style.css
+++ b/styles/style.css
@@ -40,12 +40,13 @@ body {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 5% 15%;
+        padding: 4.43% 15%;
         gap: 82px;
 
         & h1 {
             font-size: 2.25rem;
             font-family: var(--font-primaria);
+            text-align: justify;
 
             & strong {
                 color: var(--cor-terciaria);
@@ -101,7 +102,7 @@ body {
         }
 
         & .imagem-apresentacao{
-            width: 50%;
+            width: 40%;
         }
     }
 
