--- a/styles/style.css
+++ b/styles/style.css
@@ -107,12 +107,12 @@ body {
     }
 
     & footer {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
         align-items: center;
         text-align: center;
         background-color: var(--cor-terciaria);
         width: 100%;
-        padding: 24px;
+        padding: 1.5rem;
         font-family: var(--font-secundaria);
         color: var(--cor-primaria);
         font-weight: 400;
